src/test/deca/syntax/invalid/test_synt21.deca
//Resultat:
//      Erreur syntaxique : methode sans objet de retour
class A{
boolean x;
}
class B extends A {

float method(){
return ;
}
}
